# rs-codec-text

./: Cargo.toml  README.md  README.zh_CN.md
doc/: user_guide.md  user_guide.zh_CN.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: utf16_decode.rs  utf8_decode.rs
src/: ascii.rs  ascii_folding.rs  lib.rs  parsing_position.rs  prelude.rs  unicode.rs  unicode_error.rs  unicode_error_kind.rs  utf16.rs  utf8.rs
src/charset/: ascii.rs  ascii_folding.rs  bom_detect_status.rs  charset.rs  charset_registration_error.rs  charset_registration_error_kind.rs  latin1.rs  mod.rs  unicode.rs  unicode_bom.rs  utf16.rs  utf32.rs  utf8.rs
src/codec/: ascii_codec.rs  charset_codec.rs  charset_convert_error.rs  charset_convert_hooks.rs  charset_converter.rs  charset_decode_hooks.rs  charset_decode_policy.rs  charset_decoder.rs  charset_encode_action.rs  charset_encode_hooks.rs  charset_encode_plan.rs  charset_encode_policy.rs  charset_encode_probe.rs  charset_encoder.rs  coder.rs  decode_status.rs  helpers.rs  inner.rs  latin1_codec.rs  malformed_action.rs  mod.rs  text_codec.rs  text_decoder.rs  text_encoder.rs  unmappable_action.rs  utf16_byte_codec.rs  utf16_byte_decoder.rs  utf16_byte_encoder.rs  utf16_u16_codec.rs  utf16_u16_decoder.rs  utf16_u16_encoder.rs  utf32.rs  utf32_byte_codec.rs  utf32_byte_decoder.rs  utf32_u32_codec.rs  (+6 more)
tests/: ascii_tests.rs  byte_order_tests.rs  codec_coverage_tests.rs  overflow_guard_tests.rs  parsing_position_tests.rs  prelude_tests.rs  unicode_error_kind_tests.rs  unicode_error_tests.rs  unicode_tests.rs  utf16_tests.rs  utf32_tests.rs  utf8_tests.rs
(+114 files in other folders)
